# prog-metronome

./: .gitignore  CMakeLists.txt  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/cinterop/: audio_engine.def
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/kotlin/com/jayc180/rhythmengine/: MainActivity.kt  PlaybackService.kt
app/src/androidMain/kotlin/com/jayc180/rhythmengine/audio/: AudioEngineAndroid.kt  MediaSessionManager.kt  RhythmViewModel.kt  SoundImportHelper.kt  SoundRepository.kt
app/src/androidMain/kotlin/com/jayc180/rhythmengine/persistence/: ProjectStorage.kt  ProjectViewModel.kt
app/src/androidTest/java/com/jayc180/rhythmengine/: AudioTimingTests.kt  ExampleInstrumentedTest.kt
app/src/commonMain/kotlin/com/jayc180/rhythmengine/audio/: AudioEngine.kt  (+1 more)
app/src/commonTest/kotlin/com/jayc180/rhythmengine/: RhythmEngineTests.kt  TrackBuilderTests.kt
app/src/desktopMain/kotlin/: main.kt
app/src/iosMain/kotlin/com/jayc180/rhythmengine/: MainViewController.kt  RhythmViewModelIos.kt
app/src/main/cpp/: audio_engine.cpp  audio_engine_c.h  audio_engine_ios.mm  sample_store.cpp  sample_store.h  voice_mixer.cpp  voice_mixer.h
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/test/java/com/jayc180/rhythmengine/: ExampleUnitTest.kt
(+83 files in other folders)
